@@ -40,6 +40,7 @@ Neil Martinsen-Burrell
 Mark Eichin (eichin _AT_ thok.org)
 Fergal Daly (fergal _AT_ esatclear.ie)
 Bob Yexley (bob _AT_ yexley.net)
+Rhett Garber
 
 
 The project was partially developed while the author was working at NetBox Blue
